BMIPL/style.css
/* ... */
.footer-items:nth-child(3) .item {
    margin-left: 100px;
}

.copyright {
    font-size: 1.5rem;
    font-weight: 600;
    text-align: center;
}
.footer-img{
    margin-left: 20px;
    margin-top: 50px;
}

/* scroll reveal */
.reveal{
    position: relative;
    transform: translateY(100px);
    opacity: 0;
    transition: all 1s ease;
}
.reveal.active{
    transform: translateY(0px);
    opacity: 1;
}


/* media queries */
/* meia query for mac  */
@media screen and (max-width:1025px) {
    .logo-img{
        margin-top: 15px;
        width: 250px;
        height: 70px;
    }
    .logo-text{
        top: 10px;
    }

    nav{
        display: flex;
        justify-content: space-evenly;
    }
    nav ul {
        /* float: none; */
        display: flex;

    }
nav ul .listitem:hover {
    border-bottom: 3px solid var(--color-grey);
    margin-bottom: 10px;
}
nav ul .listitem{
    padding: 0px 8px;
}

nav ul .listitem a {
    /* color: var(--color-grey); */
    font-size: 16px;
    font-weight: 500;

}
.offerPage{
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;

}
.content{
    margin: 150px 0px;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    min-width: 700px;
}
.content .text{
    margin: 0;
    padding: 0;
    max-width: 300px;
    font-size: 20px;
}
.offerPage .content .box{
    position: relative;
    margin: 0px;
    padding: 0px;
    width: 250px;
    height: 350px;
}
.content  .img img{
    width: 400px;
    height: 400px;
}
.box-div{
    margin-top: 50px;
}
.text-inside-box{
    margin-top: 100px;
}
.carousel-item .circleimg {
    display:flex;
    align-items: center;
    justify-content: center;
}
.circleimg img{
    margin: 100px;

}

.section5-main-div .text p{
    font-size: 5.5rem;
    text-align: left;
}
.section5-main-div .text{
    padding: 50px 50px;
}
/* .footer-main{
    display: flex;
    flex-direction: row;
} */
.footer-items{
    margin: 0;
    padding: 0;

}

}
/* for tab  */
@media  screen and (max-width:769px) {
    nav ul .listitem a {
        font-size: 12px;
        font-weight: 400;
    
    }

    nav .logo-img{
        padding: 5px;
        margin: 5px;
        margin-top: 10px;
        width: 250px;
        height: 70px;
    }
    .video-container{
        top: 100px;
    }
    .main-div-quote .box1-div{
        width: 240px;
        height: 240px;
        margin: 0;
    }
    .main-div .text-div{
        font-size: 15px;
    }
    .left-div .box1-div .row h1{
        font-size: 5.4rem;
    }
    .img-gallery{
        margin: 0;
        padding: 0;
    }
    .img-gallery .img-item{
        margin: 0;
        padding: 30px;
    }
    .img-gallery .img-item img{
        width:50px;
        height: 50px;
    }
    #footer{
        padding: 0px;
    }
    .footer-main{
        margin: 10px;
        padding: 10px;
    }
    .footer-main .footer-items{
        max-width: 300px;
    }
    .logo-footer p{
        font-size: 12px;
    }
    .logo-footer img{
        width: 80px;
        height: 80px;
    }
    /* -------------------- */
    .footer-main{
        max-width: 760px;
        /* flex: 0 0 25%;  */
        justify-content: initial;
        display: flex;
        flex-direction: row;
    }
    .footer-items .item a{
        font-size: 15px;
      
    }
    .footer-img{
        margin-left: 20px;
        margin-top: 50px;
    }
    .footer-items:nth-child(2), .footer-items:nth-child(3), .footer-items:nth-child(4){
        padding-left: 0%;
        margin-left: 0%;
        /* text-align: left; */
    }
    .footer-items .item{
        margin-left: 20px;
    }
    .footer-items:nth-child(3) .item{
        margin-left: 20px;
    }
    .footer-items p {
        font-size: 1.2rem;
        font-weight: 500;
        margin-left: 20px;
    }
    
}
/* ... */

